--- a/style.css
+++ b/style.css
@@ -8,21 +8,21 @@ Version: v1.0
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
 a {
     text-decoration: none;
-    color: rgb(142, 142, 214);
+    color: #565656; 
 }
 a:hover,
 a:focus {
     text-decoration: underline;
 }
 
+p {
+  color: #4D4D4D;
+  font-family: 'proxima-nova',sans-serif;
+  font-size: 17px;
+  line-height: 27px;  
+}
 /* LAYOUT CSS */
 #layout {
     padding-left: 25%; /* "left col (nav + list)" width */
@@ -35,8 +35,9 @@ a:focus {
     bottom: 0;
     width: 25%;
     margin-left: -25%;
-    background: rgb(24, 33, 61);
+    background: #FBFBFA;
     color: #fff;
+    border-right: 1px solid #EEEEEE;
 }
 
 .header {
@@ -51,9 +52,10 @@ a:focus {
 .brand-title {
     text-transform: uppercase;
 }
+
 .brand-tagline {
     font-weight: 300;
-    color: rgb(142, 142, 214);
+    color: #565656; 
 }
 
 .nav-list {
@@ -124,16 +126,16 @@ a:focus {
     background: #999;
     font-size: 80%;
 }
-    .post-category-design {
+    .post-category-design, .post-category-alpha{
         background: #5aba59;
     }
-    .post-category-pure {
+    .post-category-pure, .post-category-beta {
         background: #4d85d1;
     }
-    .post-category-yui {
+    .post-category-yui, .post-category-teta {
         background: #8156a7;
     }
-    .post-category-js {
+    .post-category-js, .post-category-zeta {
         background: #df2d4f;
     }
 
