--- a/style.css
+++ b/style.css
@@ -63,21 +63,22 @@ p {
     padding: 0;
     list-style: none;
 }
-.nav-item {
+
+.menu-item, .nav-item {
     display: inline-block;
     *display: inline;
     zoom: 1;
 }
-.nav-item a {
-    background: transparent;
-    border: 3px solid rgb(103, 103, 180);
-    color: #fff;
+.menu-item a, .nav-item a {
+    /*background: transparent;*/
+    /*border: 3px solid rgb(103, 103, 180);*/
+    /*color: #fff;*/
     margin-top: 1em;
 }
-.nav-item a:hover,
-.nav-item a:focus {
-    border: 3px solid rgb(142, 142, 214);
-    color: rgb(142, 142, 214);
+.menu-item a:hover, .nav-item a:hover,
+.menu-item a:focus, .nav-item a:focus {
+    /*border: 3px solid rgb(142, 142, 214);*/
+    /*color: rgb(142, 142, 214);*/
     text-decoration: none;
 }
 
@@ -160,6 +161,31 @@ p {
 .footer .pure-menu a:hover,
 .footer .pure-menu a:focus {
     background: none;
+}
+
+.pure-button-success,
+.pure-button-error,
+.pure-button-warning,
+.pure-button-secondary {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.pure-button-success {
+    background: rgb(28, 184, 65); /* this is a green */
+}
+
+.pure-button-error {
+    background: rgb(202, 60, 60); /* this is a maroon */
+}
+
+.pure-button-warning {
+    background: rgb(223, 117, 20); /* this is an orange */
+}
+
+.pure-button-secondary {
+    background: rgb(66, 184, 221); /* this is a light blue */
 }
 
 @media (max-width: 767px) {
